# farm-rust-plugin-auto-routes

./: Cargo.toml  farm_rust_plugin_auto_routes.darwin-arm64.node  package.json  pnpm-lock.yaml
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
playground/: farm.config.ts  package.json
playground/src/: index.tsx
playground/src/assets/: index.tsx
playground/src/pages/: 404.tsx
playground/src/pages/home/: index.meta.json  index.tsx
playground/src/pages/home/me/: index.tsx
playground/src/pages/login/: index.tsx
playground/src/pages/logout/: index.tsx
playground/src/router/: index.tsx  routes.tsx  virtual:routes.tsx
scripts/: index.js
src/: cache_manager.rs  file_utils.rs  lib.rs  route_context.rs  watcher.rs
